# noza_os

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IRQ_CHECKLIST.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  main.yml
baselibc/: CMakeLists.txt  toolchain-arm-none-eabi.cmake
cmake/: toolchain-arm-none-eabi.cmake
doc/: irq.txt
drivers/console/: console_devfs.c  console_devfs.h  console_io.h  console_io_client.c
drivers/uart/: uart_devfs.c  uart_devfs.h  uart_io.h  uart_io_client.c  uart_io_service.c
drivers/ws2812/: example.c  ws2812.c  ws2812.h
include/: app_launcher.h  noza_console_api.h  noza_fs.h  noza_ipc.h  noza_irq_defs.h  noza_uart.h
include/sys/: mman.h
kernel/: context_switch.S  int_map.c  noza_config.h  noza_os.c  noza_os.h  noza_syscall.S  noza_uart.c  platform.c  platform.h  platform_config.h  printk.c  printk.h  syscall.h
kernel/arch/: arch.h
kernel/arch/arm_m/: build_stack.c  context_switch.S
kernel/platform/: rp2040.c  rp2040_build_stack.c  rp2040_context_switch.S  rp2040_critical_section.S  rp2040_platform.c
kernel/platform/qemu_mps2_an385/: board_config.h  init.c  linker.ld  platform.c  startup.S
kernel/platform/rp2040/: platform.c
scripts/: qemu_smoke.py  qemu_stress.py
service/app_launcher/: app_launcher.c
service/console/: console_io_client.c  console_io_client.h  console_io_service.c
service/fs/: devfs.c  devfs.h  fs_dispatch.c  fs_dispatch.h  fs_main.c  launcherfs.c  launcherfs.h  ramfs.c  ramfs.h  vfs.c  vfs.h
service/irq/: irq_client.c  irq_client.h  irq_service.c
service/loader/: elf.h  loader.c  loader.h
service/memory/: mem_client.c  mem_client.h  mem_serv.c  mem_serv.h
service/mutex/: mutex_client.c  mutex_client.h  mutex_serv.c  mutex_serv.h
service/name_lookup/: int_map.c  name_lookup.c  name_lookup_client.c  name_lookup_client.h  name_lookup_server.c  name_lookup_server.h  string_map.c  string_map.h
service/shell/: shell_main.c
service/sync/: sync_client.c  sync_client.h  sync_serv.c  sync_serv.h
service/vfs/: romfs.c  romfs.h  rootfs.c  rootfs.h  setbit.h  syscall.c  syscall.h  vfs.h
type/: dblist.c  dblist.h  hashslot.c  hashslot.h
user/: noza_os_demo.c  syslib.c  syslib.h  test_msg.c  test_thread.c  unit_test.c
user/apps/shell/: shell_main.c  shell_main.h
user/console/: cmd_line.c  cmd_line.h  console.h  history.c  history.h  noza_console.c  noza_console.h  noza_term.c  noza_term.h
user/demo/lua/: noza_os_demo.c
user/libc/include/: dirent.h  nozaos.h  nz_stdlib.h  setjmp.h  spinlock.h  syslib.h
user/libc/src/: app_bootstrap.S  app_launcher_client.c  app_run.S  fs_client.c  noza_syscall.S  nz_stdlib.c  proc_api.c  proc_api.h  process_spawn.c  process_wait.c  setjmp.S  spinlock.c  syscall_asm.S  syscall_io.c  syslib.c  thread_api.c  thread_api.h
user/noza_unit_test/: noza_unit_test.c  unit_test.c
user/posix/: CMakeLists.txt  errno.h  noza_posix_wrapper.h  noza_time.c  noza_time.h  pthread.h  pthread_attr.c  pthread_cond.c  pthread_cond_attr.c  pthread_mutex.c  pthread_mutex_attr.c  pthread_not_supported.c  pthread_primitives.c  pthread_sched.c  pthread_spinlock.c  semaphore.c  spawn.h
user/posix/bits/: signum.h
user/posix_unit_test/: posix_unit_test.c
user/pthread/: noza_config.h  pthread.c  pthread.h  pthread_attr.c  pthread_mutex.c  pthread_mutex_attr.c  pthread_primitives.c  pthread_sched.c
user/sys/: wait.h
util/romfs/: CMakeLists.txt  romfs_util.c  toolchain-host.cmake
